[Amir] compatability test for sdks
